Changes: admin_system stats update, swagger update, tus container name group_vars
